# hsh

./: .gitignore  LICENSE  hsh.cabal
app/: Main.hs
src/: Lib.hs
