name:                hsh
version:             0.1.0.0
synopsis:            
description:         Please see README.md
homepage:            http://github.com/tannerb/hsh#readme
license:             MIT
license-file:        LICENSE
author:              Tanner Bruce
maintainer:          tanner@tanners.space
copyright:           2015 Tanner Bruce
category:            Parser
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hsh-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       
  build-depends:       base
                     , OpenGL
                     , GLFW-b
                     , hsh
                     , utf8-string
                     , bytestring
                     , array

  default-language:    Haskell2010

test-suite hsh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hsh
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tannerb/hsh
